rke2/web-server/vg/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vg
  namespace: web-server
spec:
  parentRefs:
    - name: hwcopeland-gateway
      namespace: kube-system
      sectionName: https
  hostnames:
    - "vg.hwcopeland.net"
  rules:
    - backendRefs:
        - name: vg
          port: 80
